--- a/monitoring.yml
+++ b/monitoring.yml
@@ -6,9 +6,9 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - prometheus-data:/prometheus
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./alertmanager/alert.rules/alerts.rules.yml:/alertmanager/alert.rules/alerts.rules.yml
+      - /docker/monitoring/prometheus-data:/prometheus
+      - /docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - /docker/monitoring/alertmanager/alert.rules/alerts.rules.yml:/alertmanager/alert.rules/alerts.rules.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -19,8 +19,8 @@ services:
     image: prom/alertmanager:latest
     container_name: alertmanager
     volumes:
-      - ./alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
-      - ./alertmanager/templates/default.tmpl:/etc/alertmanager/templates/default.tmpl
+      - /docker/monitoring/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+      - /docker/monitoring/alertmanager/templates/default.tmpl:/etc/alertmanager/templates/default.tmpl
     command:
       - '--config.file=/etc/alertmanager/alertmanager.yml'
     network_mode: "host"
@@ -33,18 +33,18 @@ services:
     depends_on:
       - prometheus
     volumes:
-      - grafana-data:/var/lib/grafana
-      - ./grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
-      - ./grafana/dashboards.yml:/etc/grafana/provisioning/dashboards/dashboards.yml
-      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - /docker/monitoring/grafana-data:/var/lib/grafana
+      - /docker/monitoring/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+      - /docker/monitoring/grafana/dashboards.yml:/etc/grafana/provisioning/dashboards/dashboards.yml
+      - /docker/monitoring/grafana/grafana.ini:/etc/grafana/grafana.ini
+      - /docker/monitoring/grafana/dashboards:/var/lib/grafana/dashboards
     network_mode: "host"
 
   blackbox:
     image: prom/blackbox-exporter:latest
     container_name: blackbox_exporter
     volumes:
-    - ./blackbox:/config
+    - /docker/monitoring/blackbox:/config
     network_mode: "host"
 
   node_exporter:
