--- a/monitoring.yml
+++ b/monitoring.yml
@@ -19,6 +19,7 @@ services:
     image: prom/alertmanager:latest
     container_name: alertmanager
     volumes:
+      - alertmanager-data:/alertmanager
       - /docker/monitoring/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
       - /docker/monitoring/alertmanager/templates/default.tmpl:/etc/alertmanager/templates/default.tmpl
     command:
@@ -55,3 +56,4 @@ services:
 volumes:
   prometheus-data:
   grafana-data:
+  alertmanager-data:
