--- a/monitoring.yml
+++ b/monitoring.yml
@@ -27,6 +27,8 @@ services:
     restart: unless-stopped
     networks:
       - monitor-net
+        ports:
+      - 9090:9090
 
   alertmanager:
     image: prom/alertmanager:v0.27.0
@@ -40,6 +42,8 @@ services:
     restart: unless-stopped
     networks:
       - monitor-net
+    ports:
+      - 9093:9093
 
   grafana:
     image: grafana/grafana:10.4.0
@@ -50,6 +54,10 @@ services:
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     networks:
       - monitor-net
+    ports:
+      - 3000:3000
+    depends_on:
+      - prometheus
 
   blackbox:
     container_name: blackbox_exporter
@@ -75,3 +83,5 @@ services:
     restart: unless-stopped
     networks:
       - monitor-net
+    ports:
+      - 9100:9100
