--- a/monitoring.yml
+++ b/monitoring.yml
@@ -5,11 +5,24 @@ services:
     container_name: grafana
     restart: unless-stopped
     environment:
-     - GF_SERVER_ROOT_URL=http://my.grafana.server/
+     - GF_SERVER_ROOT_URL=http://sup.pariteau.fr/
      - GF_INSTALL_PLUGINS=grafana-clock-panel
     ports:
      - '3000:3000'
     volumes:
      - 'grafana_storage:/var/lib/grafana'
-volumes:
+  
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - 9090:9090
+    restart: unless-stopped
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prom_data:/prometheus
+  volumes:
   grafana_storage: {}
+  prom_data: {}
