--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,19 +1,20 @@
 version: "3.8"
-volumes:
-  grafana_storage: {}
+#volumes:
+#  grafana_storage: {}
 services:
   grafana:
     image: grafana/grafana-enterprise
     container_name: grafana
     restart: unless-stopped
+    user: '0'
     environment:
      - GF_SERVER_ROOT_URL=http://sup.pariteau.fr/
      - GF_INSTALL_PLUGINS=grafana-clock-panel
     ports:
      - '3000:3000'
     volumes:
-      - 'grafana_storage:/var/lib/grafana'
-  
+#      - 'grafana_storage:/var/lib/grafana'
+      - '/docker/monitoring/grafana:/var/lib/grafana'
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
