--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,7 +1,10 @@
 version: "3.8"
+
 #volumes:
 #  grafana_storage: {}
+
 services:
+
   grafana:
     image: grafana/grafana-enterprise
     container_name: grafana
@@ -15,6 +18,7 @@ services:
     volumes:
 #      - 'grafana_storage:/var/lib/grafana'
       - '/docker/monitoring/grafana:/var/lib/grafana'
+      
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -22,7 +26,19 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
-      - 9090:9090
+      - '9090:9090'
     volumes:
       - '/docker/monitoring/prometheus:/etc/prometheus'
       - '/docker/monitoring/prometheus:/prometheus'
+      
+  node_exporter:
+    image: quay.io/prometheus/node-exporter:latest
+    container_name: node_exporter
+    restart: unless-stopped
+    command:
+      - '--path.rootfs=/host'
+    ports:
+      - '9100:9100'
+    pid: host
+    volumes:
+      - '/:/host:ro,rslave'
