--- a/monitoring.yml
+++ b/monitoring.yml
@@ -7,7 +7,7 @@ services:
 
   grafana:
     image: grafana/grafana-enterprise
-    container_name: grafana
+    container_name: grafana-test
     restart: unless-stopped
     user: '0'
     environment:
@@ -21,7 +21,7 @@ services:
       
   prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus
+    container_name: prometheus-test
     restart: unless-stopped
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -33,7 +33,7 @@ services:
       
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
-    container_name: node_exporter
+    container_name: node_exporter-test
     restart: unless-stopped
     command:
       - '--path.rootfs=/host'
