--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,10 +1,8 @@
 version: "3.8"
-
 volumes:
 #  grafana_storage: {}
-  prometheus-data: [}
+  prometheus-data: {}
 services:
-
   grafana:
     image: grafana/grafana-enterprise
     container_name: grafana-test
@@ -18,7 +16,6 @@ services:
     volumes:
 #      - 'grafana_storage:/var/lib/grafana'
       - '/docker/monitoring/grafana:/var/lib/grafana'
-      
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus-test
@@ -31,7 +28,6 @@ services:
       - '/docker/monitoring/prometheus:/etc/prometheus'
 #      - '/docker/monitoring/prometheus:/prometheus'
       - prometheus-data:/prometheus
-      
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
     container_name: node_exporter-test
