--- a/monitoring.yml
+++ b/monitoring.yml
@@ -26,7 +26,7 @@ services:
       - '9090:9090'
     volumes:
       - '/docker/monitoring/prometheus:/etc/prometheus'
-      - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
+#      - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
 #      - '/docker/monitoring/prometheus:/prometheus'
 #      - prometheus-data:/prometheus
   node_exporter:
