--- a/monitoring.yml
+++ b/monitoring.yml
@@ -20,8 +20,8 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus-test
     restart: unless-stopped
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
+#    command:
+#      - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
       - '9090:9090'
     volumes:
