--- a/monitoring.yml
+++ b/monitoring.yml
@@ -20,14 +20,14 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus-test
     restart: unless-stopped
-#    command:
-#      - '--config.file=/etc/prometheus/prometheus.yml'
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
       - '9090:9090'
     volumes:
 #      - '/docker/monitoring/prometheus:/etc/prometheus'
       - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
-#      - '/docker/monitoring/prometheus:/prometheus'
+      - '/docker/monitoring/prometheus:/prometheus'
 #      - prometheus-data:/prometheus
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
