--- a/monitoring.yml
+++ b/monitoring.yml
@@ -25,9 +25,9 @@ services:
     ports:
       - '9090:9090'
     volumes:
-#      - '/docker/monitoring/prometheus:/etc/prometheus'
-      - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
-      - '/docker/monitoring/prometheus:/prometheus'
+      - '/docker/monitoring/prometheus:/etc/prometheus'
+#      - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
+#      - '/docker/monitoring/prometheus:/prometheus'
 #      - prometheus-data:/prometheus
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
