--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 volumes:
 #  grafana_storage: {}
-  prometheus-data: {}
+#  prometheus-data: {}
 services:
   grafana:
     image: grafana/grafana-enterprise
@@ -27,8 +27,8 @@ services:
     volumes:
 #      - '/docker/monitoring/prometheus:/etc/prometheus'
       - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
-#      - '/docker/monitoring/prometheus:/prometheus'
-      - prometheus-data:/prometheus
+      - '/docker/monitoring/prometheus:/prometheus'
+#      - prometheus-data:/prometheus
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
     container_name: node_exporter-test
