--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 volumes:
-#  grafana_storage: {}
-#  prometheus-data: {}
+  grafana_storage: {}
+  prometheus-data: {}
 services:
   grafana:
     image: grafana/grafana-enterprise
@@ -14,8 +14,8 @@ services:
     ports:
      - '3000:3000'
     volumes:
-#      - 'grafana_storage:/var/lib/grafana'
-      - '/docker/monitoring/grafana:/var/lib/grafana'
+      - 'grafana_storage:/var/lib/grafana'
+#      - '/docker/monitoring/grafana:/var/lib/grafana'
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus-test
@@ -25,7 +25,7 @@ services:
     ports:
       - '9090:9090'
     volumes:
-#      - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
+      - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
       - '/docker/monitoring/prometheus:/prometheus'
 #      - prometheus-data:/prometheus
   node_exporter:
