--- a/monitoring.yml
+++ b/monitoring.yml
@@ -5,7 +5,7 @@ volumes:
 services:
   grafana:
     image: grafana/grafana-enterprise
-    container_name: grafana-test
+    container_name: grafana
     restart: unless-stopped
     user: '0'
     environment:
@@ -18,7 +18,7 @@ services:
 #      - '/docker/monitoring/grafana:/var/lib/grafana'
   prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus-test
+    container_name: prometheus
     restart: unless-stopped
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -30,7 +30,7 @@ services:
       - prometheus-data:/prometheus
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
-    container_name: node_exporter-test
+    container_name: node-exporter
     restart: unless-stopped
     command:
       - '--path.rootfs=/host'
