--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 volumes:
   grafana_storage: {}
-  prometheus-data: {}
+#  prometheus-data: {}
 services:
   grafana:
     image: grafana/grafana-enterprise
@@ -14,8 +14,8 @@ services:
     ports:
      - '3000:3000'
     volumes:
-      - 'grafana_storage:/var/lib/grafana'
-#      - '/docker/monitoring/grafana:/var/lib/grafana'
+#      - 'grafana_storage:/var/lib/grafana'
+      - '/docker/monitoring/grafana:/var/lib/grafana'
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
