--- a/monitoring.yml
+++ b/monitoring.yml
@@ -28,9 +28,9 @@ services:
       - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
 #      - '/docker/monitoring/prometheus:/prometheus'
       - prometheus-data:/prometheus
-  node_exporter:
+  nodeexporter:
     image: quay.io/prometheus/node-exporter:latest
-    container_name: node-exporter
+    container_name: nodeexporter
     restart: unless-stopped
     command:
       - '--path.rootfs=/host'
