--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 volumes:
-  grafana_storage: {}
-  prometheus-data: {}
+  grafana_data: {}
+  prometheus_data: {}
 services:
   grafana:
     image: grafana/grafana-enterprise
