--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 volumes:
-  grafana_data: {}
-  prometheus_data: {}
+#  grafana_data: {}
+#  prometheus_data: {}
 services:
   grafana:
     image: grafana/grafana-enterprise
@@ -14,9 +14,10 @@ services:
     ports:
      - '3000:3000'
     volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - /docker/monitoring/grafana:/var/lib/grafana
+#      - grafana_data:/var/lib/grafana
+#      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+#      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -31,8 +32,9 @@ services:
     ports:
       - '9090:9090'
     volumes:
-      - ./prometheus:/etc/prometheus
-      - prometheus_data:/prometheus
+      - /docker/monitoring/prometheus/config:/etc/prometheus
+#      - ./prometheus:/etc/prometheus
+#      - prometheus_data:/prometheus
   nodeexporter:
     image: quay.io/prometheus/node-exporter:latest
     container_name: nodeexporter
