--- a/filebrowser.yml
+++ b/filebrowser.yml
@@ -12,3 +12,5 @@ services:
     environment:
       - FB_BASEURL=/filebrowser
     restart: unless-stopped
+    labels:
+      org.label-schema.group: "nas"
