--- a/filebrowser.yml
+++ b/filebrowser.yml
@@ -12,5 +12,5 @@ services:
     environment:
       - FB_BASEURL=/filebrowser
     restart: unless-stopped
- #   labels:
- #     org.label-schema.group: "nas"
+    labels:
+      org.label-schema.group: "nas"
