--- a/filebrowser.yml
+++ b/filebrowser.yml
@@ -7,10 +7,10 @@ services:
     ports:
       - 1000:8080
     volumes:
-      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/:/data'
-      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/filebrowser/config/:/config'
+      - "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/:/data"
+      - "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/filebrowser/config/:/config"
     environment:
-      - FB_BASEURL=/filebrowser
+      - "FB_BASEURL=/filebrowser"
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
