--- a/app-admin.yml
+++ b/app-admin.yml
@@ -22,6 +22,7 @@ services:
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
+      - "org.label-schema.group=app"
 
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
@@ -39,6 +40,7 @@ services:
       - net
     labels:
       - "com.centurylinklabs.watchtower.monitor-only=true"
+      - "org.label-schema.group=app"
 
   vaultwarden:
     container_name: vaultwarden
@@ -52,6 +54,7 @@ services:
       - net
     labels:
       - "com.centurylinklabs.watchtower.no-pull=true"
+      - "org.label-schema.group=app"
 
   watchtower:
     container_name: watchtower
@@ -81,3 +84,5 @@ services:
       - net
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
+    labels:
+      - "org.label-schema.group=app"
